# FieldML-Haskell-01

./: .project  .travis.yml  FieldML-Haskell.cabal  FieldML_Haskell.hs  FieldML_test1.hs  FieldML_test2.hs  FieldML_test_mesh01.hs  LICENSE  Notes.txt  README.md  test-log.txt
FieldML/: Core.hs  Library01.hs  Library02.hs  Utility01.hs
FieldML/Utility/: CoreInfixExpressions.hs  ExpressionTree.hs
src/: FieldML_test1.hs  FieldML_test_mesh01.hs
src/FieldML/: Core.hs  Utility01.hs
test/: FieldML-Haskell-test.hs
test/FieldML/: CoreTest.hs
