name:           FieldML-Haskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Randall Britten

executable FieldML-Haskell
  hs-source-dirs:  src
  main-is:         FieldML_test1.hs
  build-depends:   
                   base >= 4,
                   HUnit >=1.2.5 && <1.3,
                   containers >=0.5.0 && <0.6
  ghc-options:     -Wall
  other-modules:   
                   FieldML.Core,
                   FieldML.Library01,
                   FieldML.Library02,
                   FieldML.Utility.ExpressionTree,
                   FieldML.Utility01,
                   FieldML_test_mesh01

Test-suite tests
  Type: exitcode-stdio-1.0
  Hs-source-dirs: 
                  src, 
                  src/FieldML, 
                  src/FieldML/Utility
  Main-is: FieldML_test1.hs
  Other-modules: 
                 FieldML.Core,
                 FieldML.Library01,
                 FieldML.Library02,
                 FieldML.Utility01,
                 FieldML_test_mesh01
  Build-depends: 
                     base >= 4.0 && < 5.0,
                     bytestring,
                     ghc-prim,
                     hashable,
                     test-framework >= 0.3.3,
                     test-framework-hunit,
                     HUnit,
                     QuickCheck >= 2.6,
                     random == 1.0.*,
                     text >= 0.11.0.5
