name:           FieldML-Haskell
version:        0.1
cabal-version:  >= 1.18
build-type:     Simple
author:         Randall Britten
maintainer:     Randall Britten
category:       Mathematical modelling
synopsis:       A prototype for a future version of FieldML
description:    This prototype is an attempt at using Haskell to prototype FieldML design ideas. These ideas are based on discussions of the FieldML design work group at the Auckland Bioengineering Institute at Auckland University.
license:        BSD3
license-file:   LICENSE

source-repository head
  type:     git
  location: https://github.com/codecurve/FieldML-Haskell-01


executable FieldML-Haskell
  hs-source-dirs:  src
  main-is:         FieldML_test1.hs
  build-depends:   
                   base >= 4 && < 5.0,
                   HUnit >=1.2.5 && <1.3,
                   containers >=0.5.0 && <0.6,
                   test-framework >=0.8.0 && <0.9,
                   test-framework-hunit >=0.3.0 && <0.4
  ghc-options:     -Wall
  other-modules:   
                   FieldML.Core,
                   FieldML.Library01,
                   FieldML.Library02,
                   FieldML.Utility.ExpressionTree,
                   FieldML.Utility01,
                   FieldML_test_mesh01
  default-language: Haskell2010

Test-suite tests
  Type: exitcode-stdio-1.0
  Hs-source-dirs: 
                  src, 
                  src/FieldML, 
                  src/FieldML/Utility
  Main-is: FieldML_test1.hs
  Other-modules: 
                 FieldML.Core,
                 FieldML.Library01,
                 FieldML.Library02,
                 FieldML.Utility01,
                 FieldML_test_mesh01
  Build-depends: 
                     base >= 4.0 && < 5.0,
                     bytestring,
                     ghc-prim,
                     hashable,
                     containers >=0.5.0 && <0.6,
                     test-framework >= 0.3.3,
                     test-framework-hunit,
                     HUnit,
                     random == 1.0.*,
                     text >= 0.11.0.5
  default-language: Haskell2010
