name:           FieldML-Haskell
version:        0.1
cabal-version:  >= 1.16
build-type:     Simple
author:         Randall Britten
maintainer:     Randall Britten
category:       Mathematical modelling
synopsis:       A prototype for a future version of FieldML
description:    This prototype is an attempt at using Haskell to prototype FieldML design ideas. These ideas are based on discussions of the FieldML design work group at the Auckland Bioengineering Institute at Auckland University.
license:        BSD3
license-file:   LICENSE

source-repository head
  type:      git
  location:  https://github.com/codecurve/FieldML-Haskell-01

test-suite FieldML-Haskell-test
  type:              exitcode-stdio-1.0
  main-is:           FieldML-Haskell-test.hs
  ghc-options:       -Wall -rtsopts
  build-depends:     
                   base >= 4,
                   HTF > 0.9,
                   containers >=0.5.0 && <0.6
  other-modules:     
                  FieldML.Core,
                  FieldML.CoreTest,
                  FieldML.Library01,
                  FieldML.Library02,
                  FieldML.Utility01,
                  FieldML_test_mesh01
  hs-source-dirs:    
                  test,
                  src
  default-language:  Haskell2010

library 
  build-depends:   
                   base >= 4 && < 5,
                   containers >=0.5.0 && <0.6
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: 
                   FieldML.Core,
                   FieldML.Library01,
                   FieldML.Library02,
                   FieldML.Utility.ExpressionTree,
                   FieldML.Utility01
  default-language:  Haskell2010

